015 Index and projects
Fixed bugs and added new content to the index

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
     <!--
     
-              ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-             ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-             ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-             ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-             ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-              ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                        Adrian Bece, 2015.
-            -->
+                          ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+                         ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+                         ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+                         ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+                         ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+                          ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                                    Adrian Bece, 2015.
+                        -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -75,57 +75,104 @@
         </div>
 
         <div class="container-full container-blue">
-                    <h2 class="centered">Basic info</h2><hr/>
-        <div class="row">
-            <div class="col-lg-3"><img class="myPortrait img-responsive" src="./resources/images/ca_portrait.png" alt="My image"/></div>
-            <div class="col-lg-4">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaa</div>
-            <div class="col-lg-4">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaa  aaaaaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaa</div>
+            <div class="row centeredColumns">
+                <div class="col-lg-5">
+                                <h4 class="centered">Basic information</h4><hr/>
+                    <p><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp<b>Name: </b>Adrian Bece</p>
+                    <p><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp<b>Date of birth: </b>September 26th 1991.</p>
+                    <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>&nbsp<b>Location: </b>Laslovo (Osijek), Croatia</p>
+                                        <p><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>&nbsp<b>Current status: </b>Student (5th year, Master's Degree)</p>
+                    <p><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp<b>Grade average: </b>4.936 (out of 5.000)</p>
+                    
+                    <br/>
+                </div>
+                <div class="col-lg-7">
+                                <h4 class="centered">Education</h4><hr/>
+                    <p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2015.- present : </b>Microsoft Virutal Academy - various courses</p>
+                    <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2013.- present : </b>Faculty of Electrical Engineering Osijek (Master's degree)</p>
+                    <p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2013.- 2014. : </b>E-learning - Mälardalen University, Sweden (Automata theory)</p>
+                    <p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2013. : </b> Earned a degree - Bachelor's degree in computer engineering</p>
+                                        <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2010.-2013. : </b>Faculty of Electrical Engineering Osijek (Bachelor's degree)</p>
+                    <p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2010. : </b>Earned a degree - Electronics technician</p>
+                    <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2006.-2010. : </b>Elektrotehnička i prometna škola Osijek</p>
+
+                </div>
+            </div>
         </div>
+        <div class="container-full container-blue hobbiesGroup">
+            <h4 class="centered">Hobbies and interests</h4>
+            <div class="bs-glyphicons">
+                <ul class="bs-glyphicons-list">
+                    <li>
+                        <span class="glyphicon glyphicon-modal-window" aria-hidden="true"></span>
+                        <span class="glyphicon-class">Frontend development</span>
+                    </li>
+
+                    <li>
+                        <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                        <span class="glyphicon-class">Backend development</span>
+                    </li>
+
+                    <li>
+                        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                        <span class="glyphicon-class">Graphical design</span>
+                    </li>
+
+                    <li>
+                        <span class="glyphicon glyphicon-cd" aria-hidden="true"></span>
+                        <span class="glyphicon-class">Listening to music</span>
+                    </li>
+
+                    <li>
+                        <span class="glyphicon glyphicon-music" aria-hidden="true"></span>
+                        <span class="glyphicon-class">Playing guitar</span>
+                    </li>
+
+                    <li>
+                        <span class="glyphicon glyphicon-tree-deciduous" aria-hidden="true"></span>
+                        <span class="glyphicon-class">Outdoor activities</span>
+                    </li>
+
+                    <li>
+                        <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>
+                        <span class="glyphicon-class">Going out with friends</span>
+                    </li>
+                </ul>
+            </div>
+            </div>
+ <div class="container-full container-circles container" id="programming_related">
+            <h1>Detailed information</h1>
+            <br />
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="img-circle" src="./resources/images/ca_circle_design.png" alt="Design icon" style="width: 140px; height: 140px;">
+                    <h2>My skills</h2>
+                    <hr>
+                    <p class="skills-text">I've been doing graphic designs in Adobe Photoshop since 2009. and I've became very profficient using it for making graphic assets for applications and websites, artistic works, CD covers, posters, etc. Since 2013. I've been doing basic animations and complex designs for applications and websites.</p>
+                    <p><a class="btn btn-primary" href="#" role="button">Read about my skills »</a><br /><br /></p>
+                </div>
+
+                <div class="col-lg-4">
+                    <img class="img-circle" src="./resources/images/ca_circle_wireframing.png" alt="Wireframing icon" style="width: 140px; height: 140px;">
+                    <h2>My projects</h2>
+                    <hr>
+                    <p class="skills-text">I've learned the importance of wireframing in 2014. and I've been doing it ever since for both websites and desktop applications using Balsamiq Mockups. As a result of doing the wireframing before the start of the project, I've became profficent in wireframing and planning.<br /><br /></p>
+                    <p><a class="btn btn-primary" href="#" role="button">Check out my skills »</a><br /><br /></p>                
+                </div>
+
+                <div class="col-lg-4">
+                    <img class="img-circle" src="./resources/images/ca_circle_svn.png" alt="SVN icon" style="width: 140px; height: 140px;">
+                    <h2>My CV</h2>
+                    <hr>
+                    <p class="skills-text">I've been using GitHub on some occasions since 2014. and I've became familiar with it and it's importance in development. I've used SVN (TortoiseSVN) back on the game project that I've worked on in 2011. <br /><br /></p>
+                <p><a class="btn btn-primary" href="#" role="button">Download my CV (EN) »</a><br /></p>  
+                                    <p><a class="btn btn-primary" href="#" role="button">Download my CV (CRO) »</a><br /><br /></p>  
+                     </div>
+
+            </div><!-- /.row -->
         </div>
-        <!-- Glyphiconi prosiruju width. popravi kad stignes-->
-        <div class="bs-glyphicons">
-            <ul class="bs-glyphicons-list">
 
-                <li>
-                    <span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span>
-                    <span class="glyphicon-class">glyphicon glyphicon-asterisk</span>
-                </li>
-
-                <li>
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                    <span class="glyphicon-class">glyphicon glyphicon-plus</span>
-                </li>
-
-                <li>
-                    <span class="glyphicon glyphicon-euro" aria-hidden="true"></span>
-                    <span class="glyphicon-class">glyphicon glyphicon-euro</span>
-                </li>
-
-                <li>
-                    <span class="glyphicon glyphicon-eur" aria-hidden="true"></span>
-                    <span class="glyphicon-class">glyphicon glyphicon-eur</span>
-                </li>
-
-                <li>
-                    <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
-                    <span class="glyphicon-class">glyphicon glyphicon-minus</span>
-                </li>
-
-                <li>
-                    <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
-                    <span class="glyphicon-class">glyphicon glyphicon-cloud</span>
-                </li>
-
-                <li>
-                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                    <span class="glyphicon-class">glyphicon glyphicon-envelope</span>
-                </li>
-            </ul>
-        </div>
-
-
-                    <!-- Marketing messaging and featurettes
-                                                                            ================================================== -->
+                    <!-- Marketing messaging and featurettes ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
         <div class="container marketing">
 
@@ -140,7 +187,7 @@
             </footer>
         </div><!-- /.container -->
                     <!-- Bootstrap core JavaScript
-                                                                            ================================================== -->
+                                                                                                                ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
