--- a/projects.html
+++ b/projects.html
@@ -446,9 +446,9 @@
                         <p>During 2014. I've had to make a Matlab model and simulation for a specific robotic manipulator. Project includes: direct kinematics, inverse kinematics, trajectory planning, object detection, mobile robot simulation, etc.</p>
                    <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Robotic Manipulator"><img src="./projects/images/Robot_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Trajectory Simulation"><img src="./projects/images/Robot_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Object Detection"><img src="./projects/images/Robot_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Robotic Manipulator"><img src="./projects/images/Robot_01.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Trajectory Simulation"><img src="./projects/images/Robot_02.jpg" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Object Detection"><img src="./projects/images/Robot_03.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
                          </div>
                 </div>
@@ -477,7 +477,7 @@
                             <h4>Screenshots: </h4>
                             <div class="col-lg-3"><a class="lightbox-a" title="Line detection"><img src="./projects/images/Vision_01.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Position detection"><img src="./projects/images/Vision_02.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Object detection"><img src="./projects/images/Vision_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Object detection"><img src="./projects/images/Vision_03.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
