--- a/skills.html
+++ b/skills.html
@@ -308,7 +308,7 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>View my projects:</h5>
+                <div class="col-md-4"><h5>Example from my projects:</h5>
                     <p><a class="btn btn-lg btn-default" href="#" role="button">C and C++ Projects »</a></p>
                     <div>
                     </div>
@@ -333,7 +333,7 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>View my projects:</h5>
+                <div class="col-md-4"><h5>Example from my projects:</h5>
                     <p><a class="btn btn-lg btn-default" href="#" role="button">C# and .NET Projects »</a></p>
                     <div>
                     </div>
@@ -358,7 +358,7 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>View my projects:</h5>
+                <div class="col-md-4"><h5>Example from my projects:</h5>
                     <p><a class="btn btn-lg btn-default" href="#" role="button">HTML and CSS Projects »</a></p>
                     <div>
                     </div>
@@ -382,7 +382,7 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>View my projects:</h5>
+                <div class="col-md-4"><h5>Example from my projects:</h5>
                     <p><a class="btn btn-lg btn-default" href="#" role="button">Javascript & JQuery Projects »</a></p>
                     <div>
                     </div>
@@ -406,7 +406,7 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>View my projects:</h5>
+                <div class="col-md-4"><h5>Example from my projects:</h5>
                     <p><a class="btn btn-lg btn-default" href="#" role="button">PHP Projects>></a></p>
                     <div>
                     </div>
@@ -429,7 +429,7 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>View my projects:</h5>
+                <div class="col-md-4"><h5>Example from my projects:</h5>
                     <p><a class="btn btn-lg btn-default" href="#" role="button">Javascript & JQuery Projects »</a></p>
                     <div>
                     </div>
@@ -453,7 +453,7 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>View my projects:</h5>
+                <div class="col-md-4"><h5>Example from my projects:</h5>
                     <p><a class="btn btn-lg btn-default" href="#" role="button">Matlab Projects »</a></p>
                     <div>
                     </div>
@@ -478,7 +478,7 @@ Familiar
                         <li>etc.</li>
                     </ul>
                 </div>
-                <div class="col-md-4"><h5>View my projects:</h5>
+                <div class="col-md-4"><h5>Example from my projects:</h5>
                     <p><a class="btn btn-lg btn-default" href="#" role="button">ASP .NET MVC Projects »</a></p>
                     <div>
                     </div>
