016 Index and bugfixes
Fixed minor bugs and updated the index

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
     <!--
     
-                          ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
-                         ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
-                         ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
-                         ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
-                         ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-                          ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                                                    Adrian Bece, 2015.
-                        -->
+                              ██████╗ ██████╗ ██████╗ ███████╗   █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+                             ██╔════╝██╔═══██╗██╔══██╗██╔════╝  ██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+                             ██║     ██║   ██║██║  ██║█████╗    ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+                             ██║     ██║   ██║██║  ██║██╔══╝    ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+                             ╚██████╗╚██████╔╝██████╔╝███████╗  ██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+                              ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝  ╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                                        Adrian Bece, 2015.
+                            -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -77,22 +77,22 @@
         <div class="container-full container-blue">
             <div class="row centeredColumns">
                 <div class="col-lg-5">
-                                <h4 class="centered">Basic information</h4><hr/>
+                    <h4 class="centered">Basic information</h4><hr />
                     <p><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp<b>Name: </b>Adrian Bece</p>
                     <p><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp<b>Date of birth: </b>September 26th 1991.</p>
                     <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>&nbsp<b>Location: </b>Laslovo (Osijek), Croatia</p>
-                                        <p><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>&nbsp<b>Current status: </b>Student (5th year, Master's Degree)</p>
+                    <p><span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>&nbsp<b>Current status: </b>Student (5th year, Master's Degree)</p>
                     <p><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp<b>Grade average: </b>4.936 (out of 5.000)</p>
-                    
-                    <br/>
+
+                    <br />
                 </div>
                 <div class="col-lg-7">
-                                <h4 class="centered">Education</h4><hr/>
+                    <h4 class="centered">Education</h4><hr />
                     <p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2015.- present : </b>Microsoft Virutal Academy - various courses</p>
                     <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2013.- present : </b>Faculty of Electrical Engineering Osijek (Master's degree)</p>
                     <p><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp<b>2013.- 2014. : </b>E-learning - Mälardalen University, Sweden (Automata theory)</p>
                     <p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2013. : </b> Earned a degree - Bachelor's degree in computer engineering</p>
-                                        <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2010.-2013. : </b>Faculty of Electrical Engineering Osijek (Bachelor's degree)</p>
+                    <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2010.-2013. : </b>Faculty of Electrical Engineering Osijek (Bachelor's degree)</p>
                     <p><span class="glyphicon glyphicon-file" aria-hidden="true"></span>&nbsp<b>2010. : </b>Earned a degree - Electronics technician</p>
                     <p><span class="glyphicon glyphicon-education" aria-hidden="true"></span>&nbsp<b>2006.-2010. : </b>Elektrotehnička i prometna škola Osijek</p>
 
@@ -139,40 +139,40 @@
                     </li>
                 </ul>
             </div>
-            </div>
- <div class="container-full container-circles container" id="programming_related">
-            <h1>Detailed information</h1>
+        </div>
+        <div class="container-full container-circles container" id="programming_related">
+            <h1>Portfolio of my work</h1>
             <br />
             <div class="row">
                 <div class="col-lg-4">
-                    <img class="img-circle" src="./resources/images/ca_circle_design.png" alt="Design icon" style="width: 140px; height: 140px;">
+                    <img class="img-circle" src="./resources/images/ca_circle_skills.png" alt="Skills icon" style="width: 140px; height: 140px;">
                     <h2>My skills</h2>
                     <hr>
-                    <p class="skills-text">I've been doing graphic designs in Adobe Photoshop since 2009. and I've became very profficient using it for making graphic assets for applications and websites, artistic works, CD covers, posters, etc. Since 2013. I've been doing basic animations and complex designs for applications and websites.</p>
+                    <p class="skills-text">I am mainly interested in frontend development, but I am also interested in backend development and graphics design. I am a developer by profession and a designer by passion. You can read about my skills and knowledge span in more detail by clicking on the button below.</p>
                     <p><a class="btn btn-primary" href="#" role="button">Read about my skills »</a><br /><br /></p>
                 </div>
 
                 <div class="col-lg-4">
-                    <img class="img-circle" src="./resources/images/ca_circle_wireframing.png" alt="Wireframing icon" style="width: 140px; height: 140px;">
+                    <img class="img-circle" src="./resources/images/ca_circle_portfolio.png" alt="Portfolio icon" style="width: 140px; height: 140px;">
                     <h2>My projects</h2>
                     <hr>
-                    <p class="skills-text">I've learned the importance of wireframing in 2014. and I've been doing it ever since for both websites and desktop applications using Balsamiq Mockups. As a result of doing the wireframing before the start of the project, I've became profficent in wireframing and planning.<br /><br /></p>
-                    <p><a class="btn btn-primary" href="#" role="button">Check out my skills »</a><br /><br /></p>                
+                    <p class="skills-text">I've uploaded some of my projects that showcase my work on Github with full source files available. You can read about my projects in more detail, view the screenshots and download source files by clicking on the button below.</p>
+                    <p><a class="btn btn-primary" href="#" role="button">Check out my projects »</a><br /><br /></p>
                 </div>
 
                 <div class="col-lg-4">
-                    <img class="img-circle" src="./resources/images/ca_circle_svn.png" alt="SVN icon" style="width: 140px; height: 140px;">
+                    <img class="img-circle" src="./resources/images/ca_circle_cv.png" alt="CV icon" style="width: 140px; height: 140px;">
                     <h2>My CV</h2>
                     <hr>
-                    <p class="skills-text">I've been using GitHub on some occasions since 2014. and I've became familiar with it and it's importance in development. I've used SVN (TortoiseSVN) back on the game project that I've worked on in 2011. <br /><br /></p>
-                <p><a class="btn btn-primary" href="#" role="button">Download my CV (EN) »</a><br /></p>  
-                                    <p><a class="btn btn-primary" href="#" role="button">Download my CV (CRO) »</a><br /><br /></p>  
-                     </div>
+                    <p class="skills-text">If you'd like to view or download my CV and read about my skills, education and qualifications in more detail, you can download it in both English and Croatian language by clicking on one of the buttons below.</p>
+                    <p><a class="btn btn-primary" href="#" role="button">Download my CV (EN) »</a></p>
+                    <p> <a class="btn btn-primary" href="#" role="button">Download my CV (CRO) »</a><br /><br /></p>
+                </div>
 
             </div><!-- /.row -->
         </div>
 
-                    <!-- Marketing messaging and featurettes ================================================== -->
+        <!-- Marketing messaging and featurettes ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
         <div class="container marketing">
 
@@ -187,7 +187,7 @@
             </footer>
         </div><!-- /.container -->
                     <!-- Bootstrap core JavaScript
-                                                                                                                ================================================== -->
+                                                                                                                            ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
