--- a/projects.html
+++ b/projects.html
@@ -1,22 +1,22 @@
-<!--
-
-  ██████╗ ██████╗ ██████╗ ███████╗ █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
- ██╔════╝██╔═══██╗██╔══██╗██╔════╝██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
- ██║     ██║   ██║██║  ██║█████╗  ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
- ██║     ██║   ██║██║  ██║██╔══╝  ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
- ╚██████╗╚██████╔╝██████╔╝███████╗██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
-  ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
-                            Adrian Bece, 2015.
--->
+    <!--
+    
+      ██████╗ ██████╗ ██████╗ ███████╗ █████╗ ██████╗ ██████╗ ██╗ █████╗ ███╗   ██╗
+     ██╔════╝██╔═══██╗██╔══██╗██╔════╝██╔══██╗██╔══██╗██╔══██╗██║██╔══██╗████╗  ██║
+     ██║     ██║   ██║██║  ██║█████╗  ███████║██║  ██║██████╔╝██║███████║██╔██╗ ██║
+     ██║     ██║   ██║██║  ██║██╔══╝  ██╔══██║██║  ██║██╔══██╗██║██╔══██║██║╚██╗██║
+     ╚██████╗╚██████╔╝██████╔╝███████╗██║  ██║██████╔╝██║  ██║██║██║  ██║██║ ╚████║
+      ╚═════╝ ╚═════╝ ╚═════╝ ╚══════╝╚═╝  ╚═╝╚═════╝ ╚═╝  ╚═╝╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝
+                                Adrian Bece, 2015.
+    -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
+        <title>Code Adrian - Adrian Bece's Online Portfolio</title>
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
         <meta property="og:image" content="http://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
         <meta property="og:site_name" content="Code Adrian">
-<meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Frontend development, Backend development, design, science, robotics, computer vision and more.">
+        <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Frontend development, Backend development, design, science, robotics, computer vision and more.">
         <!-- Facebook meta info end -->
         <!-- Default meta info-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -437,24 +437,24 @@
                         <p><b>Technology:</b><br />Matlab m-script</p>
                         <p><b>Software:</b><br />Matlab</p>
                         <p><b>Project: </b></p>
-                         <p><a class="btn btn-default" href="./projects/files/Robotics.zip" role="button">Download link »</a></p>
+                        <p><a class="btn btn-default" href="./projects/files/Robotics.zip" role="button">Download link »</a></p>
                         <br />
                     </div>
 
                     <div class="col-lg-10">
                         <h4>Details: </h4>
                         <p>During 2014. I've had to make a Matlab model and simulation for a specific robotic manipulator. Project includes: direct kinematics, inverse kinematics, trajectory planning, object detection, mobile robot simulation, etc.</p>
-                   <div class="row">
+                        <div class="row">
                             <h4>Screenshots: </h4>
                             <div class="col-lg-3"><a class="lightbox-a" title="Robotic Manipulator"><img src="./projects/images/Robot_01.jpg" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Trajectory Simulation"><img src="./projects/images/Robot_02.jpg" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Object Detection"><img src="./projects/images/Robot_03.jpg" class="thumbnail img-responsive"></a></div>
                         </div>
-                         </div>
+                    </div>
                 </div>
             </div>
 
-<div class="container-full container-blue" id="g_computerVision">
+            <div class="container-full container-blue" id="g_computerVision">
                 <div class="row">
                     <h2>Computer Vision</h2>
                     <h5>Line detection, object detection, 3D cameras and more!</h5>
@@ -495,7 +495,7 @@
                         <p><b>Technology:</b><br />C#, MySQL, MySQL .NET Connector</p>
                         <p><b>Software:</b><br />Visual Studio, XAMPP</p>
                         <p><b>Project: </b></p>
-                         <p><a class="btn btn-default" href="http://github.com/codeAdrian/Histogram-based-image-search" target="_blank" role="button">Github link »</a></p>
+                        <p><a class="btn btn-default" href="http://github.com/codeAdrian/Histogram-based-image-search" target="_blank" role="button">Github link »</a></p>
                         <br />
                     </div>
 
@@ -503,13 +503,13 @@
                         <h4>Details: </h4>
                         <p>Project created for my master's degree. Project is to create an image search algorithm based on histograms that retrieves an image from the database which is visually most similar. I was given permission from Metropolitan museum in New York to use images from their collection for this project. This method allows fast and robust searches, regardless of image's rotation, size changes or even blur. This project is still in development and testing and it will be finished during the year.</p>
                         <p><b>Note: </b>Application requires XAMPP and the specific database which can be imported from the project folder.</p>
-                   <div class="row">
+                        <div class="row">
                             <h4>Screenshots: </h4>
                             <div class="col-lg-3"><a class="lightbox-a" title="Database search"><img src="./projects/images/Histogram_01.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Database search - rotated blurred image"><img src="./projects/images/Histogram_02.JPG" class="thumbnail img-responsive"></a></div>
                             <div class="col-lg-3"><a class="lightbox-a" title="Histograms"><img src="./projects/images/Histogram_03.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
-                         </div>
+                    </div>
                 </div>
             </div>
 
